# notifications_sprint_1

./: README.md
movies/: .env.example  Dockerfile  pyproject.toml
movies/libs/src/: dto.py
movies/libs/utils/: generate_data.py
notification_templates/: .env.example  Makefile  docker-compose.yml
notification_templates/libs/src/: handler.py  service.py
notification_templates/libs/utils/: generate_data.py
notification_templates/nginx/etc/nginx/conf.d/: default.conf
users/: .env.example
users/libs/app/: app.py
users/libs/src/: __init__.py  db.py  dto.py
users/libs/utils/: generate_data.py
