[tool.poetry]
name = "Application"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi="==0.103.1"
orjson="==3.9.7"
uvicorn="==0.23.2"
gunicorn="==20.1.0"
pydantic="==1.9.0"
uvloop="==0.17.0"
python-dotenv="==1.0.0"
httptools="==0.5.0"
httpx="==0.23.3"
pandas="*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"